@@ -1249,6 +1249,8 @@ namespace libtorrent
 		if (!name_ent)
 		{
 			ec = errors::torrent_missing_name;
+			// mark the torrent as invalid
+			m_files.set_piece_length(0);
 			return false;
 		}
 
@@ -1266,14 +1268,22 @@ namespace libtorrent
 			// this is the counter used to name pad files
 			int pad_file_cnt = 0;
 			if (!extract_single_file(info, files, "", info_ptr_diff, true, pad_file_cnt, ec))
+			{
+				// mark the torrent as invalid
+				m_files.set_piece_length(0);
 				return false;
+			}
 
 			m_multifile = false;
 		}
 		else
 		{
 			if (!extract_files(files_node, files, name, info_ptr_diff, ec))
+			{
+				// mark the torrent as invalid
+				m_files.set_piece_length(0);
 				return false;
+			}
 			m_multifile = true;
 		}
 		TORRENT_ASSERT(!files.name().empty());
@@ -1290,6 +1300,8 @@ namespace libtorrent
 		if (!pieces && !root_hash)
 		{
 			ec = errors::torrent_missing_pieces;
+			// mark the torrent as invalid
+			m_files.set_piece_length(0);
 			return false;
 		}
 
@@ -1298,6 +1310,8 @@ namespace libtorrent
 			if (pieces.string_length() != files.num_pieces() * 20)
 			{
 				ec = errors::torrent_invalid_hashes;
+				// mark the torrent as invalid
+				m_files.set_piece_length(0);
 				return false;
 			}
 
@@ -1311,6 +1325,8 @@ namespace libtorrent
 			if (root_hash.string_length() != 20)
 			{
 				ec = errors::torrent_invalid_hashes;
+				// mark the torrent as invalid
+				m_files.set_piece_length(0);
 				return false;
 			}
 			int num_leafs = merkle_num_leafs(files.num_pieces());
@@ -1318,6 +1334,8 @@ namespace libtorrent
 			if (num_nodes - num_leafs >= (2<<24))
 			{
 				ec = errors::too_many_pieces_in_torrent;
+				// mark the torrent as invalid
+				m_files.set_piece_length(0);
 				return false;
 			}
 			m_merkle_first_leaf = num_nodes - num_leafs;
