@@ -1,3 +1,4 @@
+	* make torrent_info::is_valid() return false if torrent failed to load
 	* fix per-torrent rate limits for >256 peer classes
 	* don't load user_agent and peer_fingerprint from session_state
 	* fix file rename issue with name prefix matching torrent name
